# openGL-renderer

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: camera.h  engine.h  entity.h  model.h  primitive.h  renderer.h  shader.h  texture.h  texture_loader.h  ui.h  utils.h  window.h  world.h
include/asset/: model.h  primitive.h  texture_loader.h
include/core/: engine.h  ui.h  utils.h  window.h
include/render/: renderer.h  renderer_utils.h  shader.h  shadows.h
include/scene/: camera.h  entity.h  world.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: bloom_blur.frag  bloom_downsample.frag  bloom_upsample.frag  deferred.frag  deferred.vert  depth.frag  forward.frag  forward.vert  fragment.frag  gBuffer.frag  geometry.vert  geometry_shadowMap.vert  geometry_simple.vert  hbao.frag  hdr_bg.frag  hdr_bg.vert  hdr_brdf.frag  hdr_brdf.vert  hdr_equirec.frag  hdr_equirec.vert  hdr_irr.frag  hdr_prefilter.frag  lighting.frag  postfx.frag  shadowMap.frag  ssao.frag  ssao_blur.frag  ssao_old.frag  vertex.vert
src/: camera.c  engine.c  entity.c  implementations.c  main.c  model.c  primitive.c  renderer.c  shader.c  texture.c  texture_loader.c  ui.c  window.c  world.c
src/asset/: model.c  primitive.c  texture_loader.c
src/core/: engine.c  window.c
src/render/: renderer.c  shader.c  shadows.c
src/scene/: camera.c  entity.c  world.c
util/: camera.cpp  engine.cpp  entity.cpp  shader.cpp  util.h  window.cpp
util/rtGL/: camera.h  engine.h  entity.h  shader.h  util.h  window.h
